# mcp-build_rich_context_ai_apps

./: .gitignore  Appendix.ipynb  L3-chatbot_example.ipynb  L3-chatbot_example_refactored.ipynb  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
